# LLM-Behavior-XAI

./: .gitignore  LICENSE  Makefile  README.md  design_proposal.md  pyproject.toml  requirements.txt
data/processed/: llm_results (1).csv  llm_results (2).csv  llm_results.csv  llm_results_20260423_test.csv
data/prompts/: test_prompts.csv  train_prompts.csv  valid_prompts.csv
data/raw/: prompts.csv
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: llm-response-collector.ipynb
