[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "llm_behavior_xai"
version = "0.0.1"
description = "Differences in behavioral characteristics and behavioral profiles of different language models"
authors = [
  { name = "Dominika Boguszewska, Natalia Choszczyk, Aleksandra Samsel" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["llm_behavior_xai"]
include = ["pyproject.toml", "llm_behavior_xai/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["llm_behavior_xai"]
force-sort-within-sections = true

